--- a/jobzwo/templates/jobs/listing.html
+++ b/jobzwo/templates/jobs/listing.html
@@ -1,11 +1,11 @@
 {% extends "_base.html" %}
 
 {% block content %}
-  {% include "jobzwo/_includes/_search_header.html" %}
+  {% include "jobs/_includes/_search_header.html" %}
   
   <div class="container">
     <div class="col-md-12">
-    {% include "jobzwo/_includes/_job_listing.html" %}
+    {% include "jobs/_includes/_job_listing.html" with jobs=jobs %}
     </div>
   </div><!-- .container -->
 {% endblock %}
