--- a/jobzwo/templates/jobs/_includes/_search_header.html
+++ b/jobzwo/templates/jobs/_includes/_search_header.html
@@ -12,7 +12,16 @@ search_url
       </div>
     </div>
     <div class="col-md-8">
-      <form class="form-search-list" action="{{ SEARCH_URL }}" method="get">
+
+      <form method="get">
+        {% csrf_token %}
+        {{ form.as_p }}
+
+        <button type="submit">Search</button>
+      </form>
+
+      {% comment %}
+      <form class="form-search-list" method="get">
         <div class="row">
           <div class="col-sm-5 col-xs-6 ">
             <div class="form-group">
@@ -37,6 +46,8 @@ search_url
           </div>
         </div>
       </form>
+      {% endcomment %}
+
     </div>
   </div><!-- .row -->
 </div><!-- .container -->
