+ add static html to filter template

--- a/jobzwo/templates/jobs/_includes/_search_header.html
+++ b/jobzwo/templates/jobs/_includes/_search_header.html
@@ -22,7 +22,6 @@ search_url
         <button type="submit">Search</button>
       </form>
 
-      {% comment %}
       <form class="form-search-list" method="get">
         <div class="row">
           <div class="col-sm-5 col-xs-6 ">
@@ -47,8 +46,27 @@ search_url
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-xs-12 ">
+            <strong>Filter jobs for </strong>
+          </div>
+          <div class="col-sm-4 col-xs-12">
+            <div class="checkbox">
+              <label><input type="checkbox"> visual disabilities</label>
+            </div>
+          </div>
+          <div class="col-sm-4 col-xs-12">
+            <div class="checkbox">
+              <label><input type="checkbox"> hearing disabilities</label>
+            </div>
+          </div>
+          <div class="col-sm-4 col-xs-12">
+            <div class="checkbox">
+              <label><input type="checkbox"> motor disabilities</label>
+            </div>
+          </div>
+        </div>
       </form>
-      {% endcomment %}
 
     </div>
   </div><!-- .row -->
