--- a/jobzwo/templates/jobs/_includes/_job_item.html
+++ b/jobzwo/templates/jobs/_includes/_job_item.html
@@ -9,7 +9,7 @@ job
         <a class="" href="{{ job.get_log_external_url }}">{{ job.title }}
             <i class="fa fa-link color-white-mute font-1x"></i></a></h3>
       <h5>
-        <a href="http://jobplanet.jegtheme.com/company/fast-company/"><span class="color-black">{{ job.company_name }}</span></a> 
+        <span class="color-black">{{ job.company_name }}</span>
             – <span class="color-white-mute">{{ job.location }}</span></h5>
       <p>{{ job.description }}</p>
 
