--- a/jobzwo/templates/_base.html
+++ b/jobzwo/templates/_base.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>{% block title %}{% trans "JobZwo " %}{% endblock %}{% block head_title %}{% endblock %}</title>
+    <title>{% block title %}{% trans "JOB.ZWO " %}{% endblock %}{% block head_title %}{% endblock %}</title>
 
     <!-- Bootstrap: Latest compiled and minified CSS -->
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
