--- a/jobzwo/templates/jobs/_includes/_search_header.html
+++ b/jobzwo/templates/jobs/_includes/_search_header.html
@@ -1,9 +1,4 @@
-{% load static from staticfiles %}
 {% load floppyforms %}
-
-{% comment %}
-search_url
-{% endcomment %}
 
 <div class="container">
   <div class="row">
@@ -48,14 +43,7 @@ search_url
     </div>
 
     <div class="col-md-4">
-      <div class="logo text-center-sm">
-        <a href="https://{{ CURRENT_DOMAIN }}">
-          <img src="{% static "images/logo.svg" %}" width="80" />
-        </a>
-        <br />
-        <a href="{% url "jobs_add" %}"
-            class="btn btn-block btn-theme btn-link">Create Job</a>
-      </div>
+      {% include "jobs/_includes/_logo.html" %}
     </div>
   </div><!-- .row -->
 </div><!-- .container -->
