--- a/jobzwo/templates/jobs/edit.html
+++ b/jobzwo/templates/jobs/edit.html
@@ -1,5 +1,7 @@
 {% extends "jobs/_base.html" %}
 
+{% load floppyforms %}
+
 {% block content_header %}
   {{ block.super }}
 {% endblock %}
@@ -9,12 +11,19 @@
   <div class="row">
     <div class="col-md-12">
 
-      <form method="post">
+      <form method="post" class="form-horizontal">
         {% csrf_token %}
-        {{ form }}
 
-        <button type="submit">Save</button>
-        <button type="reset">Reset</button>
+        {% form add_form using "floppyforms/layouts/jobzwo_job_edit.html" %}
+
+        <div class="row">
+          <div class="col-md-offset-6 col-md-3">
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Save</button>
+          </div>
+          <div class="col-md-3">
+            <button type="reset" class="btn btn-default btn-lg btn-block">Reset</button>
+          </div>
+        </div>
       </form>
     </div>
   </div><!-- .row -->
