--- a/jobzwo/templates/_base.html
+++ b/jobzwo/templates/_base.html
@@ -22,6 +22,7 @@
 
     <!-- Bootstrap: Latest compiled and minified CSS -->
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/select2.min.css" %}">
 
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
 
@@ -35,6 +36,7 @@
 
     <!-- http:////ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js -->
     <script src="{% static "js/jquery.2.1.3.min.js" %}"></script>
+    <script src="{% static "js/select2.js" %}"></script>
 
     {% block extra_js %}
     {% endblock %}
