--- a/jobzwo/templates/jobs/job_form.html
+++ b/jobzwo/templates/jobs/job_form.html
@@ -1,11 +1,16 @@
-listing.html{% extends "_base.html" %}
+create.html{% extends "_base.html" %}
 
 {% block content %}
   {% include "jobs/_includes/_search_header.html" %}
   
   <div class="container">
     <div class="col-md-12">
-    {% include "jobs/_includes/_job_listing.html" with jobs=jobs %}
+<form method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit" />
+</form>
+
     </div>
   </div><!-- .container -->
 {% endblock %}
