--- a/jobzwo/templates/jobs/edit.html
+++ b/jobzwo/templates/jobs/edit.html
@@ -1,9 +1,10 @@
 {% extends "_base.html" %}
+{% load floppyforms %}
 
 {% block content %}
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form }}
 
   <button type="submit">Save</button>
   <button type="reset">Reset</button>
